tests/should_fail/bug/1439.stderr
error: Empty matches are forbidden in Pearlite, because Why3 types are always inhabited.
 --> 1439.rs:6:12
  |
6 | #[requires(match empty { })]
  |            ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

